--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.4",
     "chart.js": "^4.4.7",
+    "lucide-vue-next": "^0.476.0",
     "vue": "^3.5.13"
   },
   "devDependencies": {
